--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.0.0",
+    "@emotion/css": "^11.11.2",
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.5",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.12.1",
     "next": "14.2.2",
